updated orventus server to postgresql db

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-# MONGO_URI=mongodb+srv://syedzeeyan45:orventus@cluster0.p2ich.mongodb.net/ride_app?retryWrites=true&w=majority&appName=Cluster0
-MONGO_URI=mongodb+srv://syedzeeyan45:orventus@cluster0.ie3894h.mongodb.net/ride_app?retryWrites=true&w=majority&appName=Cluster0
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres 
+# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
+# one found in a remote Prisma Postgres URL, does not contain any sensitive information.
+
+DATABASE_URL=postgresql://neondb_owner:npg_dXM2ocNmCFj3@ep-still-morning-a17oeghn-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 ACCESS_TOKEN_SECRET=tomandjerry
 ACCESS_TOKEN_EXPIRY=4d
 REFRESH_TOKEN_SECRET=jerryandtom
